[fix] text size and position and col padding

--- a/index.html
+++ b/index.html
@@ -12,51 +12,54 @@
 </head>
 <body>
 
-  <div class="container-sm text-center pt-5">
-    <h1>Bootstrap 5 Responsive Grid</h1>
-    <p>Layout a griglia con diversi breakpoint(sm, md, lg)</p>
-    <div class="row row-cols-1 row-cols-md-2 text-start">
-      <div class="bg-light col-lg-3 p-3">
+  <div class="container-sm pt-5">
+    <div class="header text-center">
+      <h1>Bootstrap 5 Responsive Grid</h1>
+    <p class="fw-light fs-5">Layout a griglia con diversi breakpoint(sm, md, lg)</p>
+    </div>
+
+    <div class="row row-cols-1 row-cols-md-2 mt-5">
+      <div class="bg-light col-lg-3 p-4">
         <h2>Colonna 1</h2>
-        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi</p>
+        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
       </div>
-      <div class="text-bg-secondary col-lg-9 p-3">
+      <div class="text-bg-secondary col-lg-9 p-4">
         <h2>Colonna 2</h2>
-        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e due terzi su dispositivi grandi</p>
+        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e due terzi su dispositivi grandi.</p>
       </div>
     </div>
 
-    <div class="row row-cols-2 row-cols-md-3 text-start text-white mt-4">
-      <div class="bg-primary col p-3">
+    <div class="row row-cols-2 row-cols-md-3 text-white mt-4">
+      <div class="bg-primary col p-4">
         <h2>Colonna 1</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
-      <div class="bg-success col p-3">
+      <div class="bg-success col p-4">
         <h2>Colonna 2</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
-      <div class="bg-danger col-12 p-3">
+      <div class="bg-danger col-12 p-4">
         <h2>Colonna 2</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
     </div>
 
-    <div class="row row-cols-2 row-cols-md-4 text-start text-white my-4">
+    <div class="row row-cols-2 row-cols-md-4 text-white my-4">
       <div class="bg-info col p-3">
         <h2>Colonna 1</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
-      <div class="bg-warning col p-3">
+      <div class="bg-warning col p-4">
         <h2>Colonna 2</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
-      <div class="bg-dark col p-3">
+      <div class="bg-dark col p-4">
         <h2>Colonna 3</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
-      <div class="text-bg-light col p-3">
+      <div class="text-bg-light col p-4">
         <h2>Colonna 4</h2>
-        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</p>
+        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
       </div>
     </div>
 
